--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -66,7 +66,7 @@
 
                 &::before {
                     top: 0;
-                    border-width: $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
+                    border-width: $tooltip-arrow-height ($tooltip-arrow-width * .5) 0;
                     border-top-color: $tooltip-arrow-color;
                 }
             }
@@ -81,7 +81,7 @@
 
                 &::before {
                     right: 0;
-                    border-width: ($tooltip-arrow-width / 2) $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
+                    border-width: ($tooltip-arrow-width * .5) $tooltip-arrow-height ($tooltip-arrow-width * .5) 0;
                     border-right-color: $tooltip-arrow-color;
                 }
             }
@@ -94,7 +94,7 @@
 
                 &::before {
                     bottom: 0;
-                    border-width: 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
+                    border-width: 0 ($tooltip-arrow-width * .5) $tooltip-arrow-height;
                     border-bottom-color: $tooltip-arrow-color;
                 }
             }
@@ -109,7 +109,7 @@
 
                 &::before {
                     left: 0;
-                    border-width: ($tooltip-arrow-width / 2) 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
+                    border-width: ($tooltip-arrow-width * .5) 0 ($tooltip-arrow-width * .5) $tooltip-arrow-height;
                     border-left-color: $tooltip-arrow-color;
                 }
             }
