--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -41,14 +41,14 @@
     // Dropdown submenu additions
     .dropdown-submenu {
         > .dropdown-menu {
-            margin-top: calc(#{$dropdown-border-width} - #{$dropdown-spacer} - #{$dropdown-padding-y});
+            margin-top: subtract($dropdown-border-width, add($dropdown-spacer, $dropdown-padding-y, false));
         }
 
         > a,
         > .dropdown-item {
             &::after {
                 position: absolute;
-                top: calc((#{$dropdown-line-height} * #{$dropdown-font-size}) / 2);
+                top: add($dropdown-line-height * $dropdown-font-size * .5, 0);
                 right: $dropdown-caret-spacer-x;
                 @include caret(end, $dropdown-caret-width, $dropdown-caret-color);
             }
@@ -189,7 +189,7 @@
                     top: auto;
                     bottom: 0;
                     margin-top: 0;
-                    margin-bottom: calc(#{$dropdown-border-width} - #{$dropdown-spacer} - #{$dropdown-padding-y});
+                    margin-bottom: subtract($dropdown-border-width, add($dropdown-spacer, $dropdown-padding-y, false));
                 }
             }
 
@@ -219,7 +219,7 @@
 
             > button::before {
                 position: absolute;
-                top: calc((#{$dropdown-line-height} * #{$dropdown-font-size}) / 2);
+                top: add($dropdown-line-height * $dropdown-font-size * .5, 0);
                 left: $dropdown-back-spacer-x;
                 @include caret(start, $dropdown-back-width, $dropdown-back-color);
             }
