--- a/scss/forms/_form-label.scss
+++ b/scss/forms/_form-label.scss
@@ -4,8 +4,8 @@
 // (or legend) text to align with the form controls.
 @if $enable-form and $enable-form-label {
     .form-label {
-        padding-top: calc(#{$input-padding-y} + #{$input-border-width});
-        padding-bottom: calc(#{$input-padding-y} + #{$input-border-width});
+        padding-top: add($input-padding-y, $input-border-width);
+        padding-bottom: add($input-padding-y, $input-border-width);
         margin-bottom: 0; // Override the `<label>/<legend>` default
         @include font-size(inherit); // Override the `<legend>` default
         font-weight: $form-label-font-weight;
@@ -23,8 +23,8 @@
 
             %form-label-#{$size} {
                 @if $sz-padding-y != null {
-                    padding-top: calc(#{$sz-padding-y} + #{$input-border-width});
-                    padding-bottom: calc(#{$sz-padding-y} + #{$input-border-width});
+                    padding-top: add($sz-padding-y, $input-border-width);
+                    padding-bottom: add($sz-padding-y, $input-border-width);
                 }
                 @include font-size($sz-font-size);
                 line-height: $sz-line-height;
