--- a/scss/forms/_form-layout.scss
+++ b/scss/forms/_form-layout.scss
@@ -15,13 +15,13 @@
     .form-row {
         display: flex;
         flex-wrap: wrap;
-        margin-right: -$form-row-gutter-width / 2;
-        margin-left: -$form-row-gutter-width / 2;
+        margin-right: $form-row-gutter-width * -.5;
+        margin-left: $form-row-gutter-width * -.5;
 
         > .col,
         > [class*="col-"] {
-            padding-right: $form-row-gutter-width / 2;
-            padding-left: $form-row-gutter-width / 2;
+            padding-right: $form-row-gutter-width * .5;
+            padding-left: $form-row-gutter-width * .5;
         }
     }
 }
