--- a/scss/mixins/_caret.scss
+++ b/scss/mixins/_caret.scss
@@ -2,7 +2,7 @@
 // Default color value is `currentColor` when not defined
 
 @mixin caret-down($width: $caret-border-width, $color: null) {
-    margin-top: $width / -2;
+    margin-top: $width * -.5;
     @if $color != null {
         $color:  #{" " + $color};
     }
@@ -13,7 +13,7 @@
 }
 
 @mixin caret-up($width: $caret-border-width, $color: null) {
-    margin-top: $width / -2;
+    margin-top: $width * -.5;
     @if ($color != null) {
         $color:  #{" " + $color};
     }
@@ -24,7 +24,7 @@
 }
 
 @mixin caret-start($width: $caret-border-width, $color: null) {
-    margin-top: $width / -2;
+    margin-top: $width * -.5;
     @if ($color != null) {
         $color:  #{" " + $color};
     }
@@ -35,7 +35,7 @@
 }
 
 @mixin caret-end($width: $caret-border-width, $color: null) {
-    margin-top: $width / -2;
+    margin-top: $width * -.5;
     @if ($color != null) {
         $color:  #{" " + $color};
     }
