--- a/scss/utilities/_embed.scss
+++ b/scss/utilities/_embed.scss
@@ -27,7 +27,7 @@
         @each $key, $ratio in $embed-fluid-aspect-ratios {
             .embed-fluid-#{$key} {
                 &::before {
-                    padding-top: percentage(map-get($ratio, y) / map-get($ratio, x));
+                    padding-top: percentage(divide(map-get($ratio, y), map-get($ratio, x)));
                 }
             }
         }
