--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -231,10 +231,7 @@
                     padding-left: $list-horizontal-padding;
                     margin-top: 0;
                     margin-left: -$list-border-width;
-                    border-top-width: 0;
-                    border-right-width: $list-border-width;
-                    border-bottom-width: 0;
-                    border-left-width: $list-border-width;
+                    border-width: 0 $list-border-width;
                 }
 
                 > .list-item + .list-item {
