--- a/scss/functions/_color-util.scss
+++ b/scss/functions/_color-util.scss
@@ -171,6 +171,7 @@
 //     var v =  (c < 0.04045) ? (c / 12.92) : Math.pow((c + 0.055) / 1.055, 2.4);
 //     console.log(v);
 // }
+// stylelint-disable number-max-precision
 // stylelint-disable-next-line scss/dollar-variable-default, scss/dollar-variable-colon-space-after
 $color-channel-lookup:
     0
