--- a/site/assets/4.2/scss/_sidebar.scss
+++ b/site/assets/4.2/scss/_sidebar.scss
@@ -17,7 +17,7 @@
         @supports (position: sticky) {
             position: sticky;
             top: 3.375rem;
-            max-height: calc(100vh - 3.375rem);
+            max-height: subtract(100vh, 3.375rem);
         }
     }
 }
@@ -38,7 +38,7 @@
         border-top: 0;
 
         @supports (position: sticky) {
-            max-height: calc(100vh - 3.375rem);
+            max-height: subtract(100vh, 3.375rem);
             padding-right: 1rem;
             padding-bottom: 1rem;
             margin-right: -1rem;
@@ -46,7 +46,7 @@
             overflow-y: auto;
 
             .cf-search ~ & {
-                max-height: calc(100vh - 3.375rem - 3.125rem - 1px);
+                max-height: subtract(100vh, add(3.375rem, add(3.125rem, 1px, false), false));
             }
         }
     }
