--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -174,6 +174,23 @@
             padding: $popover-body-padding-y $popover-body-padding-x;
             color: $popover-body-color;
         }
+
+        @if $enable-popover-close {
+            .close + .popover-body {
+                padding-right: add($close-font-size, $popover-control-padding-x);
+            }
+        }
+        @if $enable-popover-drag {
+            .drag + .popover-body {
+                padding-right: add($close-font-size, $popover-control-padding-x);
+            }
+        }
+        @if $enable-popover-close and $enable-popover-drag {
+            .close ~ .drag + .popover-body {
+                padding-right: add($close-font-size * 2, $popover-control-padding-x * 2);
+            }
+        }
+
     }
 
     // Control buttons
