--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -141,5 +141,11 @@
         text-align: center;
         background-color: $tooltip-bg;
         @include border-radius($tooltip-border-radius);
+
+        @if $enable-tooltip-close {
+            .close + & {
+                padding-right: add(1.25rem, $tooltip-close-padding-x);
+            }
+        }
     }
 }
