Tooltip/Popover: Improve handling empty content (#794)
* Tooltip/Popover: Improve handling empty content

* Use :empty instead of remove for popover

--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -173,7 +173,28 @@
         .popover-body {
             padding: $popover-body-padding-y $popover-body-padding-x;
             color: $popover-body-color;
+
+            &:empty {
+                display: none;
+            }
         }
+
+        @if $enable-popover-close {
+            .close ~ .popover-header:empty ~ .popover-body {
+                padding-right: add($close-font-size, $popover-control-padding-x);
+            }
+        }
+        @if $enable-popover-drag {
+            .drag ~ .popover-header:empty ~ .popover-body {
+                padding-right: add($close-font-size, $popover-control-padding-x);
+            }
+        }
+        @if $enable-popover-close and $enable-popover-drag {
+            .close ~ .drag ~ .popover-header:empty ~ .popover-body {
+                padding-right: add($close-font-size * 2, $popover-control-padding-x * 2);
+            }
+        }
+
     }
 
     // Control buttons
